# lockfree_log

./: CMakeLists.txt
cmake/: log_library-config.cmake.in
examples/: CMakeLists.txt  example.cpp  main.cpp
include/log_library/: config.h  file_sink.h  file_sink_config.h  logger.h  mpsc_queue.hpp  sink.h
include/log_library/internal/: message_payload.hpp  mpsc_queue.hpp
include/log_library/sinks/: file_sink.h
src/: CMakeLists.txt  file_rotation.cpp  file_rotation.h  linux_file_sink.cpp  linux_file_sink.h  logger.cpp  windows_file_sink.cpp
src/core/: CMakeLists.txt  logger.cpp
src/internal/: file_sink_config.h  sink.h  sink_config.h
src/sinks/: CMakeLists.txt  file_rotation.cpp  file_rotation.h  file_sink.cpp  linux_file_sink.cpp  windows_file_sink.cpp  windows_file_sink.h
test/: CMakeLists.txt  burst_consistency_test.cpp  continous_running.cpp  hot_path_latency_test.cpp  logger_throughput.cpp
